[gd_scene load_steps=27 format=3 uid="uid://dgujxn340oh7j"]

[ext_resource type="Script" uid="uid://ce0l0apak5iqi" path="res://addons/milestone/demo/scripts/demo_achievements.gd" id="1_fibc6"]
[ext_resource type="Script" uid="uid://wn30x7o3f47m" path="res://addons/milestone/scripts/achievements/achievement_notifier.gd" id="2_gbuwq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t5dxj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pv48d"]

[sub_resource type="Theme" id="Theme_t5dxj"]
HScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_t5dxj")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_pv48d")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8h6ex"]
content_margin_left = 50.0
content_margin_top = 50.0
content_margin_right = 50.0
content_margin_bottom = 50.0
bg_color = Color(0.098235, 0.129401, 0.160567, 1)

[sub_resource type="SystemFont" id="SystemFont_pgbcl"]
font_names = PackedStringArray("Inter")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pgbcl"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.248339, 0.292706, 0.337072, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pestd"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.3268, 0.3784, 0.43, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t5dxj"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.3268, 0.3784, 0.43, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pv48d"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.3268, 0.36593, 0.43, 0.592157)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8h6ex"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f47fg"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.337072, 0.248991, 0.248339, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6ylx"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.43, 0.3268, 0.3268, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8ixd"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.43, 0.3268, 0.3268, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yu2xc"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.43, 0.3268, 0.3268, 0.592157)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4g53w"]
bg_color = Color(0.054902, 0.0784314, 0.105882, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.188235, 0.211765, 0.254902, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="SystemFont" id="SystemFont_8h6ex"]
font_names = PackedStringArray("Inter")
font_weight = 800
subpixel_positioning = 0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4g53w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uyofh"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.137255, 0.14902, 0.180392, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="SystemFont" id="SystemFont_pv48d"]
font_names = PackedStringArray("Segoe UI", "Inter")
font_weight = 700

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a28wf"]
bg_color = Color(0.239216, 0.266667, 0.313726, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aa0m6"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.101961, 0.623529, 1, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8h6ex"]
color = Color(0.188235, 0.211765, 0.254902, 1)
grow_begin = 5.0
grow_end = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pgbcl"]
content_margin_bottom = 20.0

[sub_resource type="SystemFont" id="SystemFont_t5dxj"]
font_names = PackedStringArray("Segoe UI", "Inter")
font_weight = 700

[node name="DemoAchievements" type="Control" node_paths=PackedStringArray("achievement_notifier", "achievements_unlocked_label", "achievements_unlocked_percentage", "achievements_progress_bar", "unlocked_container", "unlocked_achievements_container", "locked_container", "locked_achievements_container", "hidden_achievements_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_t5dxj")
script = ExtResource("1_fibc6")
achievement_notifier = NodePath("AchievementNotifier")
achievements_unlocked_label = NodePath("PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/PanelContainer/BoxContainer/BoxContainer/AchievementsUnlockedLabel")
achievements_unlocked_percentage = NodePath("PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/PanelContainer/BoxContainer/BoxContainer/AchievementsUnlockedPercentage")
achievements_progress_bar = NodePath("PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/PanelContainer/BoxContainer/AchievementsProgressBar")
unlocked_container = NodePath("PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/ScrollContainer/BoxContainer/UnlockedContainer")
unlocked_achievements_container = NodePath("PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/ScrollContainer/BoxContainer/UnlockedContainer/UnlockedAchievementContainer")
locked_container = NodePath("PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/ScrollContainer/BoxContainer/LockedContainer")
locked_achievements_container = NodePath("PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/ScrollContainer/BoxContainer/LockedContainer/LockedAchievementContainer")
hidden_achievements_container = NodePath("PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/ScrollContainer/BoxContainer/LockedContainer/HiddenAchievementContainer")

[node name="AchievementNotifier" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_gbuwq")
volume = 0.3
pitch_scale = 1.2
metadata/_custom_type_script = "uid://wn30x7o3f47m"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_8h6ex")

[node name="BoxContainer" type="BoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10
alignment = 1
vertical = true

[node name="BoxContainer" type="BoxContainer" parent="PanelContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 10
alignment = 2

[node name="UnlockAllAchievements" type="Button" parent="PanelContainer/BoxContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_behavior_recursive = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.615686, 0.74902, 0.878431, 1)
theme_override_colors/font_focus_color = Color(0.615686, 0.74902, 0.878431, 1)
theme_override_colors/font_pressed_color = Color(0.616, 0.748, 0.88, 1)
theme_override_colors/font_hover_color = Color(0.615686, 0.74902, 0.878431, 1)
theme_override_colors/font_hover_pressed_color = Color(0.615686, 0.74902, 0.878431, 1)
theme_override_colors/font_disabled_color = Color(0.301, 0.3655, 0.43, 1)
theme_override_fonts/font = SubResource("SystemFont_pgbcl")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_pgbcl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pestd")
theme_override_styles/hover = SubResource("StyleBoxFlat_t5dxj")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pv48d")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8h6ex")
action_mode = 0
text = "Unlock all achievements"

[node name="ResetAchievements" type="Button" parent="PanelContainer/BoxContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_behavior_recursive = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.88, 0.616, 0.616, 1)
theme_override_colors/font_focus_color = Color(0.878431, 0.615686, 0.615686, 1)
theme_override_colors/font_pressed_color = Color(0.878431, 0.615686, 0.615686, 1)
theme_override_colors/font_hover_color = Color(0.878431, 0.615686, 0.615686, 1)
theme_override_colors/font_hover_pressed_color = Color(0.878431, 0.615686, 0.615686, 1)
theme_override_colors/font_disabled_color = Color(0.42, 0.294, 0.294, 1)
theme_override_fonts/font = SubResource("SystemFont_pgbcl")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_f47fg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t6ylx")
theme_override_styles/hover = SubResource("StyleBoxFlat_d8ixd")
theme_override_styles/disabled = SubResource("StyleBoxFlat_yu2xc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8h6ex")
action_mode = 0
text = "Reset Achievements"

[node name="CloseGame" type="Button" parent="PanelContainer/BoxContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_behavior_recursive = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.88, 0.616, 0.616, 1)
theme_override_colors/font_focus_color = Color(0.878431, 0.615686, 0.615686, 1)
theme_override_colors/font_pressed_color = Color(0.878431, 0.615686, 0.615686, 1)
theme_override_colors/font_hover_color = Color(0.878431, 0.615686, 0.615686, 1)
theme_override_colors/font_hover_pressed_color = Color(0.878431, 0.615686, 0.615686, 1)
theme_override_colors/font_disabled_color = Color(0.42, 0.294, 0.294, 1)
theme_override_fonts/font = SubResource("SystemFont_pgbcl")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_f47fg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t6ylx")
theme_override_styles/hover = SubResource("StyleBoxFlat_d8ixd")
theme_override_styles/disabled = SubResource("StyleBoxFlat_yu2xc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8h6ex")
action_mode = 0
text = "Close game"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_4g53w")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/BoxContainer/PanelContainer"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15

[node name="BoxContainer" type="BoxContainer" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
vertical = true

[node name="Label" type="Label" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.721569, 0.737255, 0.74902, 1)
theme_override_fonts/font = SubResource("SystemFont_8h6ex")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxEmpty_4g53w")
text = "Achievements"
uppercase = true

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_uyofh")

[node name="BoxContainer" type="BoxContainer" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 5
vertical = true

[node name="BoxContainer" type="BoxContainer" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/PanelContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AchievementsUnlockedLabel" type="Label" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/PanelContainer/BoxContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.721569, 0.737255, 0.74902, 1)
theme_override_fonts/font = SubResource("SystemFont_pv48d")
theme_override_font_sizes/font_size = 12
text = "% of % achievements unlocked"
vertical_alignment = 1
uppercase = true

[node name="AchievementsUnlockedPercentage" type="Label" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/PanelContainer/BoxContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 1
theme_override_colors/font_color = Color(0.721569, 0.737255, 0.74902, 1)
theme_override_fonts/font = SubResource("SystemFont_pv48d")
theme_override_font_sizes/font_size = 12
text = "0%"
horizontal_alignment = 2
vertical_alignment = 1
uppercase = true

[node name="AchievementsProgressBar" type="ProgressBar" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/PanelContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxFlat_a28wf")
theme_override_styles/fill = SubResource("StyleBoxFlat_aa0m6")
show_percentage = false

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_constants/separation = 1
theme_override_styles/separator = SubResource("StyleBoxLine_8h6ex")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_pgbcl")
horizontal_scroll_mode = 0
vertical_scroll_mode = 4

[node name="BoxContainer" type="BoxContainer" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25
vertical = true

[node name="UnlockedContainer" type="BoxContainer" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/ScrollContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8
vertical = true

[node name="Label" type="Label" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/ScrollContainer/BoxContainer/UnlockedContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.721569, 0.737255, 0.74902, 1)
theme_override_fonts/font = SubResource("SystemFont_t5dxj")
theme_override_font_sizes/font_size = 12
text = "Unlocked Achievements"
uppercase = true

[node name="UnlockedAchievementContainer" type="BoxContainer" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/ScrollContainer/BoxContainer/UnlockedContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8
vertical = true

[node name="LockedContainer" type="BoxContainer" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/ScrollContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8
vertical = true

[node name="Label" type="Label" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/ScrollContainer/BoxContainer/LockedContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.721569, 0.737255, 0.74902, 1)
theme_override_fonts/font = SubResource("SystemFont_t5dxj")
theme_override_font_sizes/font_size = 12
text = "Locked Achievements"
uppercase = true

[node name="LockedAchievementContainer" type="BoxContainer" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/ScrollContainer/BoxContainer/LockedContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8
vertical = true

[node name="HiddenAchievementContainer" type="BoxContainer" parent="PanelContainer/BoxContainer/PanelContainer/MarginContainer/BoxContainer/ScrollContainer/BoxContainer/LockedContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8
vertical = true

[node name="Label" type="Label" parent="PanelContainer/BoxContainer"]
self_modulate = Color(1, 1, 1, 0.196078)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "UI based on the design used by Steam. Original design by Valve."
horizontal_alignment = 1
